# wfa-app

./: .env.example  .gitignore  Dockerfile  STORE_PUBLISHING.md  pyproject.toml  render.yaml
app/: auth.py  database.py  email.py  main.py
app/models/: chat.py  complaint.py  compliance.py  user.py
app/routers/: audit.py  auth_routes.py  authorities_data.py  chat.py  complaints.py  compliance.py  policies.py  policy_checker.py  rights.py  rights_data.py  subscription.py
app/static/: manifest.webmanifest  sw.js
app/static/css/: style.css
app/static/icons/: generate_icons.py
app/templates/: 404.html  base.html  chat.html  checklist.html  complaint_detail.html  complaint_form.html  complaint_preview.html  complaints.html  compliance.html  dashboard.html  delete_account.html  feedback.html  index.html  login.html  offline.html  policies.html  policy_checker.html  policy_checker_result.html  policy_custom_form.html  policy_custom_result.html  policy_form.html  policy_result.html  privacy.html  register.html  rights.html  rights_detail.html  subscribe.html  subscribe_success.html
tests/: conftest.py  test_auth.py  test_chat.py  test_complaints.py  test_compliance.py  test_email.py  test_home.py  test_policies.py  test_policy_checker.py  test_rights.py  test_subscription.py
